--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,13 +13,15 @@
     <title>Métodos de Estudo Eficazes</title>
 </head>
 <body>
-  <header>
-        <img src="logotipo.png" alt="Logótipo do site">
-        <div>
-          <h1>Métodos de Estudo Eficazes</h1>
-          <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
+ <header>
+        <div class="conteudo-header">
+            <img src="logotipo.png" alt="Logótipo do site">
+            <div class="texto-header">
+                <h1>Métodos de Estudo Eficazes</h1>
+                <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
+            </div>
         </div>
-      </header>
+    </header>
     
     <br>
     <nav class="sidebar">
