--- a/html/metodos.html
+++ b/html/metodos.html
@@ -12,12 +12,14 @@
 
 <body>
     <header>
-        <img src="logotipo.png" alt="Logótipo do site">
-        <div>
-          <h1>Métodos de Estudo Eficazes</h1>
-          <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
+        <div class="conteudo-header">
+            <img src="logotipo.png" alt="Logótipo do site">
+            <div class="texto-header">
+                <h1>Métodos de Estudo Eficazes</h1>
+                <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
+            </div>
         </div>
-      </header>
+    </header>
     
     <br>
     <nav class="sidebar">
