--- a/html/recursos.html
+++ b/html/recursos.html
@@ -83,7 +83,15 @@
         </dl>
 
       </section>
+    <section class="metodos-xml">
+    <h2>📋 Métodos carregados do ficheiro XML</h2>
+    <ul id="lista-metodos"></ul>
+</section>
+    <script src="trabalho.js"></script>
+<script>
     
+    carregarMetodosXML();   
+</script>
   
 </body>
 </html>
