--- a/html/recursos.html
+++ b/html/recursos.html
@@ -87,7 +87,7 @@
     <h2>📋 Métodos carregados do ficheiro XML</h2>
     <ul id="lista-metodos"></ul>
 </section>
-    <script src="trabalho.js"></script>
+    <script src="../js/trabalho.js"></script>
 <script>
     
     carregarMetodosXML();   
