--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,7 +15,7 @@
 <body>
  <header>
         <div class="conteudo-header">
-            <img src="logotipo.png" alt="Logótipo do site">
+            <img src="../image/logotipo.png" alt="Logótipo do site">
             <div class="texto-header">
                 <h1>Métodos de Estudo Eficazes</h1>
                 <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
