--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora os métodos de estudo mais eficazes para melhorar o teu desempenho académico. Técnicas práticas e recursos úteis."/>
     <meta name="keywords" content="estudo, métodos de estudo, pomodoro, flashcards, mapas mentais, educação, técnicas de estudo"/>
-    <meta name="author" content="inf24tigXX" />
+    <meta name="author" content="inf24tig07" />
     <link rel="stylesheet" type="text/css" href="style.css">
    
     
@@ -61,17 +61,17 @@
 
         <button type="button" onclick="verificarFormulario()">Enviar</button>
 
-        <a href="MetodosEstudo.xml" download>
+        <a href="../xml/MetodosEstudo.xml" download>
           <button type="button">Descarregar ficheiro xml</button>
         </a>
     </form>
 
     <footer>
-        <p>&copy; 2025 Métodos de Estudo Eficazes | Desenvolvido pelo grupo inf24tigXX</p>
+        <p>&copy; 2025 Métodos de Estudo Eficazes | Desenvolvido pelo grupo inf24tig07</p>
         <p>Este site foi criado no âmbito do módulo INF-TI como parte de um trabalho prático.</p>
     </footer>
 </body>
-<script src="trabalho.js"></script>
+<script src="../js/trabalho.js"></script>
         <script>
             contarpalavras();
             
