--- a/html/metodos.html
+++ b/html/metodos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora os métodos de estudo mais eficazes para melhorar o teu desempenho académico. Técnicas práticas e recursos úteis."/>
     <meta name="keywords" content="estudo, métodos de estudo, pomodoro, flashcards, mapas mentais, educação, técnicas de estudo"/>
-    <meta name="author" content="inf24tigXX" />
+    <meta name="author" content="inf24tig07" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Métodos de Estudo</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="conteudo-header">
-            <img src="logotipo.png" alt="Logótipo do site">
+            <img src="../image/logotipo.png" alt="Logótipo do site">
             <div class="texto-header">
                 <h1>Métodos de Estudo Eficazes</h1>
                 <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
@@ -23,7 +23,7 @@
     
     <br>
     <nav class="sidebar">
-        <a href="index.html" target="_blank"> Página principal</a><br>
+        <a href="../index.html" target="_blank"> Página principal</a><br>
         <a href="metodos.html" target="_blank"> Metodos de Estudo</a><br>
         <a href="recursos.html" target="_blank">Recursos de Estudo</a><br>
         <a href="contacto.html" target="_blank">Contactos</a><br>
@@ -52,10 +52,10 @@
         <tr>
           <td rowspan="4">
             <ul style="list-style: none; padding-left: 0;">
-              <li><img src="pomodoro-technique.png" alt="Pomodoro" width="20"> Pomodoro</li>
-              <li><img src="mapas-mentais.png" alt="Mapas Mentais" width="20"> Mapas Mentais</li>
-              <li><img src="flashcards.png" alt="Flashcards" width="20"> Flashcards</li>
-              <li><img src="autoexplicacao.png" alt="Autoexplicação" width="20"> Autoexplicação</li>
+              <li><img src="../image/pomodoro-technique.png" alt="Pomodoro" width="20"> Pomodoro</li>
+              <li><img src="../image/mapas-mentais.png" alt="Mapas Mentais" width="20"> Mapas Mentais</li>
+              <li><img src="../image/flashcards.png" alt="Flashcards" width="20"> Flashcards</li>
+              <li><img src="../image/autoexplicacao.png" alt="Autoexplicação" width="20"> Autoexplicação</li>
             </ul>
           </td>
           <td>
@@ -119,7 +119,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Métodos de Estudo Eficazes | Desenvolvido pelo grupo inf24tigXX</p>
+    <p>&copy; 2025 Métodos de Estudo Eficazes | Desenvolvido pelo grupo inf24tig07</p>
     <p>Este site foi criado no âmbito do módulo INF-TI como parte de um trabalho prático.</p>
   </footer>
 </body>
