--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,7 +25,7 @@
     
     <br>
     <nav class="sidebar">
-        <a href="index.html" target="_blank"> Página principal</a><br>
+        <a href="../index.html" target="_blank"> Página principal</a><br>
         <a href="metodos.html" target="_blank"> Metodos de Estudo</a><br>
         <a href="recursos.html" target="_blank">Recursos de Estudo</a><br>
         <a href="contacto.html" target="_blank">Contactos</a><br>
