--- a/html/recursos.html
+++ b/html/recursos.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora os métodos de estudo mais eficazes para melhorar o teu desempenho académico. Técnicas práticas e recursos úteis."/>
     <meta name="keywords" content="estudo, métodos de estudo, pomodoro, flashcards, mapas mentais, educação, técnicas de estudo"/>
-    <meta name="author" content="inf24tigXX" />
+    <meta name="author" content="inf24tig07" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Métodos de Estudo</title>
 </head>
 <body>
     <header>
         <div class="conteudo-header">
-            <img src="logotipo.png" alt="Logótipo do site">
+            <img src="../image/logotipo.png" alt="Logótipo do site">
             <div class="texto-header">
                 <h1>Métodos de Estudo Eficazes</h1>
                 <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
@@ -22,7 +22,7 @@
     
     <br>
       <nav class="sidebar">
-        <a href="index.html" target="_blank"> Página principal</a><br>
+        <a href="../index.html" target="_blank"> Página principal</a><br>
         <a href="metodos.html" target="_blank"> Metodos de Estudo</a><br>
         <a href="recursos.html" target="_blank">Recursos de Estudo</a><br>
         <a href="contacto.html" target="_blank">Contactos</a><br>
