--- a/html/recursos.html
+++ b/html/recursos.html
@@ -87,11 +87,14 @@
     <h2>📋 Métodos carregados do ficheiro XML</h2>
     <ul id="lista-metodos"></ul>
 </section>
+    <footer>
+        <p>&copy; 2025 Métodos de Estudo Eficazes | Desenvolvido pelo grupo inf24tig07</p>
+        <p>Este site foi criado no âmbito do módulo INF-TI como parte de um trabalho prático.</p>
+    </footer>
+</body>
     <script src="../js/trabalho.js"></script>
 <script>
     
     carregarMetodosXML();   
 </script>
-  
-</body>
 </html>
