atualizar os ficheiros html

--- a/html/metodos.html
+++ b/html/metodos.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Explora os métodos de estudo mais eficazes para melhorar o teu desempenho académico. Técnicas práticas e recursos úteis."/>
     <meta name="keywords" content="estudo, métodos de estudo, pomodoro, flashcards, mapas mentais, educação, técnicas de estudo"/>
     <meta name="author" content="inf24tig07" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Métodos de Estudo</title>
 </head>
 
 <body>
     <header>
         <div class="conteudo-header">
-            <img src="../image/logotipo.png" alt="Logótipo do site">
+            <img src="../images/logotipo.png" alt="Logótipo do site">
             <div class="texto-header">
                 <h1>Métodos de Estudo Eficazes</h1>
                 <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
@@ -24,9 +24,9 @@
     <br>
     <nav class="sidebar">
         <a href="../index.html" target="_blank"> Página principal</a><br>
-        <a href="metodos.html" target="_blank"> Metodos de Estudo</a><br>
-        <a href="recursos.html" target="_blank">Recursos de Estudo</a><br>
-        <a href="contacto.html" target="_blank">Contactos</a><br>
+        <a href="../html/metodos.html" target="_blank"> Metodos de Estudo</a><br>
+        <a href="../html/recursos.html" target="_blank">Recursos de Estudo</a><br>
+        <a href="../html/contacto.html" target="_blank">Contactos</a><br>
     </nav>
 
 
@@ -52,10 +52,10 @@
         <tr>
           <td rowspan="4">
             <ul style="list-style: none; padding-left: 0;">
-              <li><img src="../image/pomodoro-technique.png" alt="Pomodoro" width="20"> Pomodoro</li>
-              <li><img src="../image/mapas-mentais.png" alt="Mapas Mentais" width="20"> Mapas Mentais</li>
-              <li><img src="../image/flashcards.png" alt="Flashcards" width="20"> Flashcards</li>
-              <li><img src="../image/autoexplicacao.png" alt="Autoexplicação" width="20"> Autoexplicação</li>
+              <li><img src="../images/pomodoro-technique.png" alt="Pomodoro" width="20"> Pomodoro</li>
+              <li><img src="../images/mapas-mentais.png" alt="Mapas Mentais" width="20"> Mapas Mentais</li>
+              <li><img src="../images/flashcards.png" alt="Flashcards" width="20"> Flashcards</li>
+              <li><img src="../images/autoexplicacao.png" alt="Autoexplicação" width="20"> Autoexplicação</li>
             </ul>
           </td>
           <td>
