--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Explora os métodos de estudo mais eficazes para melhorar o teu desempenho académico. Técnicas práticas e recursos úteis."/>
     <meta name="keywords" content="estudo, métodos de estudo, pomodoro, flashcards, mapas mentais, educação, técnicas de estudo"/>
     <meta name="author" content="inf24tig07" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
    
     
     
@@ -15,7 +15,7 @@
 <body>
  <header>
         <div class="conteudo-header">
-            <img src="../image/logotipo.png" alt="Logótipo do site">
+            <img src="../images/logotipo.png" alt="Logótipo do site">
             <div class="texto-header">
                 <h1>Métodos de Estudo Eficazes</h1>
                 <p class="subtitulo">Descobre como estudar melhor, em menos tempo</p>
