--- a/html/contacto.html
+++ b/html/contacto.html
@@ -26,9 +26,10 @@
     <br>
     <nav class="sidebar">
         <a href="../index.html" target="_blank"> Página principal</a><br>
-        <a href="metodos.html" target="_blank"> Metodos de Estudo</a><br>
-        <a href="recursos.html" target="_blank">Recursos de Estudo</a><br>
-        <a href="contacto.html" target="_blank">Contactos</a><br>
+        <a href="../html/metodos.html" target="_blank"> Metodos de Estudo</a><br>
+        <a href="../html/recursos.html" target="_blank">Recursos de Estudo</a><br>
+        <a href="../html/contacto.html" target="_blank">Contactos</a><br>
+        <a href="../html/Curiosidadesensino.html" target="_blank">Ensino</a><br>
     </nav>
     <form>
         <label for="fname">Nome</label>
