--- a/html/recursos.html
+++ b/html/recursos.html
@@ -26,6 +26,7 @@
         <a href="../html/metodos.html" target="_blank"> Metodos de Estudo</a><br>
         <a href="../html/recursos.html" target="_blank">Recursos de Estudo</a><br>
         <a href="../html/contacto.html" target="_blank">Contactos</a><br>
+        <a href="../html/Curiosidadesensino.html" target="_blank">Ensino</a><br>
       </nav>
 
     <section class="recursos-externos">
