--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <a href="../trabalho-final-main/html/metodos.html" target="_blank"> Metodos de Estudo</a><br>
         <a href="../trabalho-final-main/html/recursos.html" target="_blank">Recursos de Estudo</a><br>
         <a href="../trabalho-final-main/html/contacto.html" target="_blank">Contactos</a><br>
+        <a href="../trabalho-final-main/html/Curiosidadesensino.html" target="_blank">Ensino</a><br>
+         
     </nav>
     <main>
         <section class="introducao">
